Correcion de creacion de postulantes con FK id_perfil

--- a/Frontend/src/app/shared/components/header/header.css
+++ b/Frontend/src/app/shared/components/header/header.css
@@ -129,9 +129,9 @@ nav a:hover::after {
   display: none;
 }
 
-/* .message-switch {
-  display: none;
-} */
+.message-switch {
+  cursor: pointer;
+}
 
 @media (max-width: 768px) {
   nav ul {
